Setup of v15 for listed building journey

--- a/app/views/appellant-submission/v15/listed-building/appeal-documents/appeal-statement.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-documents/appeal-statement.html
@@ -134,7 +134,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
