--- a/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation-status.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation-status.html
@@ -59,7 +59,7 @@ What is the status of your planning obligation? - Upload documents for your appe
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
