--- a/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation-upload.html
@@ -107,7 +107,7 @@
         {% endif %}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
