--- a/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation.html
@@ -84,7 +84,7 @@ Do you plan to submit a planning obligation to support your appeal? - Upload doc
         </details>
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
