--- a/app/views/appellant-submission/v15/listed-building/appeal-site/agricultural-holdings-tell-tenants.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-site/agricultural-holdings-tell-tenants.html
@@ -94,7 +94,7 @@
         {% endif %}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
