--- a/app/views/appellant-submission/v15/listed-building/appeal-site/knows-none/advertising-appeal.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-site/knows-none/advertising-appeal.html
@@ -64,7 +64,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
