--- a/app/views/appellant-submission/v15/listed-building/check-your-answers.html
+++ b/app/views/appellant-submission/v15/listed-building/check-your-answers.html
@@ -818,7 +818,7 @@
 
         {{ govukButton({
           href: "declaration",
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
