--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/certificates-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/certificates-upload.html
@@ -82,7 +82,7 @@ Site ownership and agricultural holdings certificates - Upload documents from yo
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
