--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/certificates.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/certificates.html
@@ -57,7 +57,7 @@ Does the application form include site ownership and agricultural holdings certi
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
