--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/development-changed.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/development-changed.html
@@ -70,7 +70,7 @@ Did the proposed development change after you submitted your application? - Uplo
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
