--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/original-decision.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/original-decision.html
@@ -75,7 +75,7 @@ Decision notice from your original planning application - Upload documents from 
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
