--- a/app/views/index.html
+++ b/app/views/index.html
@@ -305,6 +305,9 @@ service-start{% extends "layout.html" %}
                     <li>
                       <a href="/appellant-submission/v15/before-you-start/">Start from 'Before you start'</a>
                     </li>
+                    <li>
+                      <a href="/appellant-submission/v15/listed-building/task-list">Start from 'Task list' for a Listed building consent appeal</a>
+                    </li>
                     <!--li>
                       Starting from check your answers in 'Before you start':</a>
                       <ul class="govuk-list govuk-list--bullet">
