--- a/app/views/appellant-submission/v15/listed-building/appeal-documents/supporting-documents-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-documents/supporting-documents-upload.html
@@ -82,7 +82,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
