--- a/app/views/appellant-submission/v15/listed-building/appeal-site/knows-some/identifying-landowners.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-site/knows-some/identifying-landowners.html
@@ -80,7 +80,7 @@
         {% endif %}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
