--- a/app/views/appellant-submission/v15/listed-building/appeal-site/knows-some/tell-landowners.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-site/knows-some/tell-landowners.html
@@ -100,7 +100,7 @@
         {% endif %}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
