--- a/app/views/appellant-submission/v15/listed-building/contact-details/your-details.html
+++ b/app/views/appellant-submission/v15/listed-building/contact-details/your-details.html
@@ -92,7 +92,7 @@
         
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
