--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/design-access-statement-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/design-access-statement-upload.html
@@ -72,7 +72,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
