--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/plans-drawings-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/plans-drawings-upload.html
@@ -88,7 +88,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
