--- a/app/views/appellant-submission/v15/listed-building/procedure-type/common-ground.html
+++ b/app/views/appellant-submission/v15/listed-building/procedure-type/common-ground.html
@@ -72,7 +72,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
