--- a/app/views/appellant-submission/v15/listed-building/procedure-type/decide.html
+++ b/app/views/appellant-submission/v15/listed-building/procedure-type/decide.html
@@ -69,7 +69,7 @@
         
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
