--- a/app/views/appellant-submission/v15/listed-building/procedure-type/hearing/why.html
+++ b/app/views/appellant-submission/v15/listed-building/procedure-type/hearing/why.html
@@ -41,7 +41,7 @@
         }) }}
         
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
