--- a/app/views/appellant-submission/v15/listed-building/procedure-type/inquiry/days.html
+++ b/app/views/appellant-submission/v15/listed-building/procedure-type/inquiry/days.html
@@ -42,7 +42,7 @@
         }) }}
         
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
