--- a/app/views/appellant-submission/v15/before-you-start/shutter/appeal-about.html
+++ b/app/views/appellant-submission/v15/before-you-start/shutter/appeal-about.html
@@ -14,7 +14,7 @@
         You need to use the existing service
       </h1>
       <p class="govuk-body">
-        This new service is only for appeals about certain types of development.
+        This new service is only for appeals about minor developments.
       </p>
       <p class="govuk-body">
         You need to submit your appeal using the existing service, the Appeals Casework Portal.
