--- a/app/views/appellant-submission/v15/before-you-start/what-are-you-appealing.html
+++ b/app/views/appellant-submission/v15/before-you-start/what-are-you-appealing.html
@@ -54,6 +54,11 @@
               checked: checked("appealsub-"+version+"-bys-whatareyouappealing", "Householder planning")
             },
             {
+              value: "Listed building consent",
+              text: "Listed building consent",
+              checked: checked("appealsub-"+version+"-bys-whatareyouappealing", "Listed building consent")
+            },
+            {
               value: "Outline planning",
               text: "Outline planning",
               checked: checked("appealsub-"+version+"-bys-whatareyouappealing", "Outline planning")
