--- a/app/views/appellant-submission/v15/before-you-start/appeal-about.html
+++ b/app/views/appellant-submission/v15/before-you-start/appeal-about.html
@@ -2,7 +2,7 @@
 {% extends "layouts/appellant-submission/v15.html" %}
 
 {% block pageTitle %}
-  Was your planning application about any of the following? - Before you start - {{serviceName}} - GOV.UK
+  Was the planning application about a major development? - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -34,7 +34,7 @@
           name: "appealsub-"+version+"-bys-appealabout",
           fieldset: {
             legend: {
-              text: "Was your planning application about any of the following?",
+              text: "Was the planning application about a major development?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
@@ -44,41 +44,52 @@
           },
           items: [
             {
-              value: "A listed building",
-              text: "A listed building",
-              checked: checked("appealsub-"+version+"-bys-appealabout", "A listed building")
+              value: "Yes",
+              text: "Yes",
+              checked: checked("appealsub-"+version+"-bys-appealabout", "Yes")
             },
             {
-              value: "Major dwellings",
-              text: "Major dwellings",
-              checked: checked("appealsub-"+version+"-bys-appealabout", "Major dwellings")
-            },
-            {
-              value: "Major general industry, storage or warehousing",
-              text: "Major general industry, storage or warehousing",
-              checked: checked("appealsub-"+version+"-bys-appealabout", "Major general industry, storage or warehousing")
-            },
-            {
-              value: "Major retail and services",
-              text: "Major retail and services",
-              checked: checked("appealsub-"+version+"-bys-appealabout", "Major retail and services")
-            },
-            {
-              value: "Major travelling and caravan pitches",
-              text: "Major travelling and caravan pitches",
-              checked: checked("appealsub-"+version+"-bys-appealabout", "Major travelling and caravan pitches")
-            },
-            {
-              divider: "Or"
-            },
-            {
-              value: "No, my planning application was not about any of these",
-              text: "No, my planning application was not about any of these",
-              behaviour: "exclusive",
-              checked: checked("appealsub-"+version+"-bys-appealabout", "No, my planning application was not about any of these")
+              value: "No",
+              text: "No",
+              checked: checked("appealsub-"+version+"-bys-appealabout", "No")
             }
           ]
         }) }}
+
+        <details class="govuk-details" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              What is a major development?
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            <p class="govuk-body">
+              A housing development is major if it has either:
+            </p>
+            <ul class="govuk-list">
+              <li>
+                10 or more houses
+              </li>
+              <li>
+                a site area of 0.5 hectares or more, and an unknown number of houses
+              </li>
+            </ul>
+            <p class="govuk-body">
+              A travelling and caravan pitch development is major if it has 10 or more pitches.
+            </p>
+            <p class="govuk-body">
+              Any other type of development is major if it either:
+            </p>
+            <ul class="govuk-list">
+              <li>
+                creates 1000 square metres of floor space or more
+              </li>
+              <li>
+                has a site area of 1 hectare or more
+              </li>
+            </ul>
+          </div>
+        </details>
 
         {{ govukButton({
           text: "Continue"
