Before you start now functioning for listed building changes

--- a/app/views/appellant-submission/v15/before-you-start/shutter/removal-variation-conditions.html
+++ b/app/views/appellant-submission/v15/before-you-start/shutter/removal-variation-conditions.html
@@ -1,4 +1,4 @@
-{% set pageref = "BYS-ACP-7-AS15" %}
+{% set pageref = "BYS-ACP-8-AS15" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
@@ -14,7 +14,7 @@
         You need to use the existing service
       </h1>
       <p class="govuk-body">
-        This new service is only for appeals about certain types of planning application.
+        This new service is only for appeals about certain types of planning permission.
       </p>
       <p class="govuk-body">
         You need to submit your appeal using the existing service, the Appeals Casework Portal.
