--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/original-decision.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/original-decision.html
@@ -74,9 +74,16 @@ Decision notice from your original planning application - Upload documents from 
           '
         }) }}
 
+<div class="govuk-button-group">
         {{ govukButton({
           text: "Save and continue"
         }) }}
+      {{ govukButton({
+        href: "/appellant-submission/"+version+"/save-return/appeal-saved?savedOn=task",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
+      }) }}
+</div>
 
       </form>
 
