--- a/app/views/appellant-submission/v15/listed-building/planning-application-documents/certificates-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/planning-application-documents/certificates-upload.html
@@ -81,9 +81,16 @@ Site ownership and agricultural holdings certificates - Upload documents from yo
           '
         }) }}
 
+<div class="govuk-button-group">
         {{ govukButton({
           text: "Save and continue"
         }) }}
+      {{ govukButton({
+        href: "/appellant-submission/"+version+"/save-return/appeal-saved?savedOn=task",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
+      }) }}
+</div>
 
       </form>
 
