--- a/app/views/appellant-submission/v15/listed-building/procedure-type/inquiry/days.html
+++ b/app/views/appellant-submission/v15/listed-building/procedure-type/inquiry/days.html
@@ -41,9 +41,16 @@
           value: data["appealsub-"+version+"-proceduretype-inquiry-days"]
         }) }}
         
+<div class="govuk-button-group">
         {{ govukButton({
           text: "Save and continue"
         }) }}
+      {{ govukButton({
+        href: "/appellant-submission/"+version+"/save-return/appeal-saved?savedOn=task",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
+      }) }}
+</div>
 
       </form>
 
