--- a/app/views/appellant-submission/v15/listed-building/check-your-answers.html
+++ b/app/views/appellant-submission/v15/listed-building/check-your-answers.html
@@ -826,8 +826,9 @@
           }) }}
 
           {{ govukButton({
-            href: "/appellant-submission/"+version+"/save-return/what-is-your-application-number",
-            text: "Continue to my appeal"
+            href: "/appellant-submission/"+version+"/save-return/appeal-saved",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
           }) }}
         </div>
 
