--- a/app/views/appellant-submission/v15/listed-building/confirmation.html
+++ b/app/views/appellant-submission/v15/listed-building/confirmation.html
@@ -42,12 +42,11 @@
       <p class="govuk-body">
         We'll check you've submitted everything we need to progress your appeal. We'll contact you once we've done this.
       </p>
-      <!--
 
       <br><br><br><br><br>
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-      <p class="govuk-body govuk-!-margin-top-9"><a href="../email/confirmation">(go to confirmation email)</a></p>
--->
+      <p class="govuk-body govuk-!-margin-top-9"><a href="/appellant-submission/{{version}}/email/confirmation">(go to confirmation email)</a></p>
+
     </div>
   </div>
 
