Content fixes for listed building submission v15

--- a/app/views/appellant-submission/v15/email/confirmation.html
+++ b/app/views/appellant-submission/v15/email/confirmation.html
@@ -1,11 +1,11 @@
 {% extends "layout-email.html" %}
 
 {% block pageTitle %}
-  We've received your planning appeal
+  We've received your listed building appeal
 {% endblock %}
 
 {% block content %}
-<p><strong>Subject:</strong> We've received your planning appeal</p>
+<p><strong>Subject:</strong> We've received your listed building appeal</p>
 <p><strong>From:</strong> Appeal a planning decision</p>
 
 <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
