--- a/app/views/appellant-submission/v15/listed-building/check-your-answers.html
+++ b/app/views/appellant-submission/v15/listed-building/check-your-answers.html
@@ -822,14 +822,15 @@
         <div class="govuk-button-group">
           {{ govukButton({
             href: "declaration",
-            text: "Save and continue"
+            text: "Continue"
           }) }}
-
+<!--
           {{ govukButton({
             href: "/appellant-submission/"+version+"/save-return/appeal-saved",
             text: "Save and come back later",
             classes: "govuk-button--secondary"
           }) }}
+-->
         </div>
 
       </form>
