--- a/app/views/appellant-submission/v15/save-return/email/confirmation-email.html
+++ b/app/views/appellant-submission/v15/save-return/email/confirmation-email.html
@@ -16,7 +16,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     <strong>Subject:</strong> Confirm your email address
   </p>
   <p>
-    <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
+    <strong>To:</strong> {{ data["savereturn-v15-email"] or 'sam@mac.com'}}<br>
     <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
   <p>
@@ -45,8 +45,13 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
       This link will expire after 30 minutes.
     </p>
 
+    <br><br>
     <p class="govuk-body">
-      From The Planning Inspectorate
+      Thank you,
+    </p>
+    <p class="govuk-body govuk-!-margin-bottom-9">
+      The Planning Inspectorate<br>
+      enquiries@planninginspectorate.gov.uk
     </p>
 
   </div>
