--- a/app/views/index.html
+++ b/app/views/index.html
@@ -303,11 +303,14 @@ service-start{% extends "layout.html" %}
                   </h4>
                   <ul class="govuk-list govuk-list--bullet">
                     <li>
-                      <a href="/appellant-submission/v15/before-you-start/">Start from 'Before you start'</a>
+                      <a href="/appellant-submission/v15/guidance/submit-an-appeal">Start from 'Submit an appeal' guidance</a>
                     </li>
                     <li>
-                      <a href="/appellant-submission/v15/listed-building/task-list">Start from 'Task list' for a Listed building consent appeal</a>
+                      <a href="/appellant-submission/v15/before-you-start/">Start from 'Before you start'</a>
                     </li>
+                    <!--li>
+                      <a href="/appellant-submission/v15/listed-building/task-list">Start from 'Task list' for a Listed building consent appeal</a>
+                    </li-->
                     <!--li>
                       Starting from check your answers in 'Before you start':</a>
                       <ul class="govuk-list govuk-list--bullet">
