--- a/app/views/appellant-submission/v15/save-return/input-code.html
+++ b/app/views/appellant-submission/v15/save-return/input-code.html
@@ -44,11 +44,20 @@
 
       </form>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-9">
         <a href="request-code" class="">
           Not received the code?
         </a>
       </p>
+
+      <!-- this is a prototype only link -->
+      <div class="govuk-grid-column-two-thirds govuk-!-margin-top-9">
+        <p class="govuk-body-s pins-prototype-only">
+          <a href="email/email-with-code">
+            Go to the email (your inbox)
+          </a>
+        </p>
+      </div>
 
 
     </div>
